--- a/sass/member.scss
+++ b/sass/member.scss
@@ -1,7 +1,7 @@
 /*!
     Copyright @ JKD Team
     Author: fcdcyy@sina.cn
-    Date: 2015-01-04 10:38:58 [AM]
+    Date: 2015-02-02 13:02:38
 */
 
 @charset "utf-8";
@@ -816,16 +816,19 @@ $hcolor: #faa42e;
 
 .pn-safety {
   padding: 0 20px;
+  @extend %ffst;
   table {
     width: 100%;
     border-spacing: 0;
     border-collapse: collapse;
+    line-height: 1.5;
   }
   .pn-safety-sign {
     border-bottom: 1px dotted #999;
     padding: 20px 20px 10px 20px;
     cite {
       color: #666;
+      font-style: normal;
     }
     a {
       color: #02b1cb;
@@ -895,6 +898,7 @@ $hcolor: #faa42e;
     }
     span {
       color: #999;
+      @extend %ffar;
     }
     p {
       color: #666;
@@ -902,22 +906,42 @@ $hcolor: #faa42e;
   }
   a {
     &.pn-safety-edit {
-      background: url(../images/bt_bg1.jpg) 0 -34px no-repeat;
+      background: #fff;
+      background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#ededed));
+      background: -moz-linear-gradient(top,  #fff,  #ededed);
+      filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ededed');
       display: inline-block;
       width: 89px;
       height: 30px;
       line-height: 29px;
       text-align: center;
-      color: #666;
+      color: #606060;
+      border: solid 1px #b7b7b7;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      border-radius: 3px;
+      @extend %ffyh;
+      &:hover{
+        background: #ededed;
+        background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#dcdcdc));
+        background: -moz-linear-gradient(top,  #fff,  #dcdcdc);
+        filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#dcdcdc');
+      }
     }
     &.pn-safety-check {
-      background: url(../images/bt_bg1.jpg) 0 0 no-repeat;
+      background: $hcolor;
       display: inline-block;
       width: 89px;
       height: 30px;
       line-height: 29px;
       text-align: center;
       color: #fff;
+      -webkit-border-radius: 3px;
+      -moz-border-radius: 3px;
+      border-radius: 3px;
+      &:hover{
+        background: #EC8E0E;
+      }
     }
   }
 }
@@ -1129,7 +1153,7 @@ $hcolor: #faa42e;
   }
 }
 
-                                                                        /* 
+                                                                        /*
 .picScroll-left .hd .prevStop{ background-position:-60px 0; }
 .picScroll-left .hd .nextStop{ background-position:-60px -50px; } */
 
@@ -1203,15 +1227,6 @@ a.wopj_bt {
 
 .wdpj {
   background: #fff;
-  td p {
-    width: 58px;
-    height: 16px;
-    line-height: 16px;
-    text-align: center;
-    color: #fff;
-    background-color: #963C00;
-    border-radius: 2px;
-  }
   .price {
     font-size: 14px;
   }
@@ -1249,7 +1264,6 @@ a.wopj_bt {
 .pn-article {
   border-top: 1px solid #f8f8f8;
   padding: 35px 0 0 16px;
-  display: none;
 }
 
 .pn-top-nav {
@@ -4515,7 +4529,26 @@ a.tijiao_bt:hover, .fc_pjsd a.tijiao_bt:hover {
 .grzl {
   margin-top: 44px;
   background: #fff;
-  padding: 20px 0;
+  padding: 0 0 20px;
+}
+
+.tab-sub{
+  border-bottom: 1px solid #D1D1D1;
+  height: 36px;
+  line-height: 36px;
+  padding-left: 10px;
+  @extend %ffst;
+  li{
+    @extend %fl;
+    padding: 0 10px;
+  }
+  a{
+    color: #333;
+  }
+  .selected a{
+    color: #666;
+    font-weight: 700;
+  }
 }
 
 .grzl_ty1 {
@@ -4559,6 +4592,7 @@ a.tijiao_bt:hover, .fc_pjsd a.tijiao_bt:hover {
   width: 100%;
   text-align: center;
   padding: 3px 0;
+  line-height: 1.5;
   &:hover {
     text-decoration: underline;
   }
@@ -4576,8 +4610,53 @@ a.tijiao_bt:hover, .fc_pjsd a.tijiao_bt:hover {
   margin-top: -3px;
 }
 
-.grzl_ty3 select {
-  color: #666;
+.grzl_ty3{
+  line-height: 2.8;
+  select {
+    color: #666;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  textarea{
+    display: inline-block;
+    min-height: 34px;
+    margin-left: 28px;
+    padding: 6px 9px;
+    font-size: 14px;
+    line-height: 20px;
+    color: #555555;
+    vertical-align: middle;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
+    -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
+    -o-transition: border linear 0.2s, box-shadow linear 0.2s;
+    transition: border linear 0.2s, box-shadow linear 0.2s;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
 }
 
 .grzl_ty8 {
@@ -4586,13 +4665,15 @@ a.tijiao_bt:hover, .fc_pjsd a.tijiao_bt:hover {
 }
 
 .grzl_ty9 {
-  width: 66px;
-  height: 25px;
   border: none;
-  background-position: 0px -452px;
-  font-size: 0;
-  margin-left: 75px;
+  background: $hcolor;
+  margin-left: 110px;
   cursor: pointer;
+  line-height: 32px;
+  padding: 0 30px;
+  font-weight: 700;
+  color: #fff;
+  @include fz(14px);
 }
 
 .grzl_ty10 {
@@ -4603,26 +4684,53 @@ a.tijiao_bt:hover, .fc_pjsd a.tijiao_bt:hover {
   margin-top: 30px;
 }
 
+.grzl_ty11{
+  width: auto;
+  padding-left: 8px;
+  @include align(left);
+}
+
 .form-control {
-display: block;
-width: 100%;
-height: 34px;
-padding: 6px 12px;
-font-size: 14px;
-line-height: 1.42857143;
-color: #555;
-background-color: #fff;
-background-image: none;
-border: 1px solid #ccc;
-border-radius: 4px;
--webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
--webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
--o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
--webkit-box-sizing: border-box;
--moz-box-sizing: border-box;
-box-sizing: border-box;
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.checkbox-inline {
+  display: inline-block;
+  padding-left: 20px;
+  margin: 0 10px 10px 0;
+  font-weight: 400;
+  vertical-align: middle;
+  cursor: pointer;
+  line-height: 1;
+  input{
+    position: absolute;
+    margin-top: 4px \9;
+    margin-left: -20px;
+    line-height: normal;
+  }
+}
+
+.form-group{
+  float: left;
+  margin-left: 30px;
 }
 
 
