--- a/css/confirm.css
+++ b/css/confirm.css
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+/*
+ * Copyright (c) 2015 JKD TEAM (9koudai.net)
+ * @Author: fcdcyy@sina.cn
+ *
+ * @DateTime: 2015-03-07 10:35:28
+ */
 table {
   border-collapse: collapse;
   border-spacing: 0 !important; }
@@ -15,9 +21,10 @@ input {
 .content_c {
   overflow: hidden; }
 
-.main {
-  padding-bottom: 30px; }
-
+/* .main{
+  @extend %c84;
+  padding-bottom: 30px;
+} */
 .btn {
   background: url(../images/btn-bg-1.png) no-repeat;
   float: left;
@@ -210,7 +217,7 @@ a.btn:hover {
     color: #aaa;
     line-height: 23px;
     margin-top: 20px;
-   /* 
+   /*
   &.step-1 {
     width: 113px;
   } */ }
@@ -1437,7 +1444,726 @@ a.btn:hover {
     position: relative;
     z-index: 2; }
 
-/* yb*/
+.main {
+  position: relative;
+  width: 1000px;
+  background: #fff;
+  overflow: hidden;
+  margin: 180px auto 30px;
+  color: #333; }
+  .main h3 {
+    position: relative;
+    left: 0px;
+    font: 16px/24px Microsoft YaHei; }
+    .main h3 span {
+      font-size: 12px;
+      font-weight: normal;
+      color: #f00;
+      padding: 0 0 0 20px; }
+    .main h3 i {
+      width: 24px;
+      height: 24px;
+      margin: 0 10px 0 0;
+      float: left;
+      color: #fff;
+      font-style: normal;
+      text-align: center;
+      background: url(../images/confirm_icon1.png) no-repeat;
+      background-position: 0 -19px; }
+    .main h3 b {
+      margin: 0 0 0 13px; }
+
+/* 立即支付 */
+.info {
+  background-color: #fff;
+  overflow: hidden;
+  margin-top: 20px; }
+
+.bank-list {
+  padding: 10px 0;
+  border: 1px solid #d5d5d5; }
+  .bank-list .bank_radio {
+    vertical-align: middle;
+    margin: 0 15px; }
+  .bank-list em {
+    font-weight: normal;
+    font-size: 12px;
+    color: #999;
+    margin-left: 20px; }
+
+.gheader.bank-wrap .bank-list li em {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 21px;
+  height: 40px;
+  background: #ccffee;
+  border-left: 1px solid #b4c5bf;
+  color: #000;
+  text-align: center;
+  font-family: "宋体";
+  padding-top: 2px; }
+
+.bank-list h3 {
+  font-size: 14px;
+  color: #333;
+  font-weight: bold; }
+.bank-list label {
+  cursor: pointer; }
+.bank-list h3 a {
+  float: right;
+  font-size: 12px;
+  font-family: "宋体";
+  text-decoration: none;
+  color: #c29721;
+  margin-right: 22px;
+  font-weight: normal;
+  position: relative; }
+  .bank-list h3 a i {
+    border-style: solid dashed dashed dashed;
+    border-color: #C29721 transparent transparent  transparent;
+    border-width: 4px 4px 0px 4px;
+    position: absolute;
+    top: 7px;
+    right: -10px;
+    height: 0px;
+    width: 0px;
+    font-size: 0px;
+    overflow: hidden; }
+.bank-list ul {
+  display: none; }
+  .bank-list ul img {
+    vertical-align: middle; }
+  .bank-list ul li {
+    background: #fff;
+    border: 1px solid #ccc;
+    float: left;
+    margin: 27px 15px 0 15px;
+    width: 188px;
+    height: 40px;
+    padding: 0;
+    overflow: hidden;
+    position: relative; }
+
+.pay .bank-list li input {
+  vertical-align: middle;
+  margin-left: 10px; }
+
+.bank-list ul li.chked i {
+  display: block;
+  height: 27px;
+  width: 27px;
+  background-position: -38px -46px;
+  position: absolute;
+  right: 4px;
+  bottom: 18px; }
+.bank-list ul li.chked img {
+  border: 1px solid #52aa41; }
+.bank-list ul li.chked b {
+  background-position: -36px 0; }
+.bank-list ul li em.hot {
+  position: absolute;
+  right: 6px;
+  background-color: #ff6600;
+  color: #FFF;
+  padding: 0 2px;
+  font-size: 11px;
+  border-radius: 3px 0 0 3px;
+  line-height: 14px;
+  font-family: "microsoft YaHei"; }
+.bank-list ul li a {
+  float: left;
+  text-decoration: none; }
+.bank-list ul li b {
+  float: left;
+  width: 20px;
+  height: 20px;
+  margin-right: 4px;
+  margin-top: 10px; }
+.bank-list ul li span {
+  height: 20px;
+  width: 140px;
+  background-color: #c6a756;
+  text-align: center;
+  color: #fff;
+  line-height: 20px;
+  *line-height: 18px;
+  display: block; }
+
+.info .bank_on {
+  border: 2px solid #fb7f89;
+  background: #fff9f9;
+  padding-bottom: 30px; }
+  .info .bank_on ul {
+    display: block; }
+.info .bank-list .selected {
+  border: 2px solid #e4393c;
+  width: 186px;
+  height: 38px; }
+
+#invoice_need_edit, #invoice_need_save, #time_closed {
+  margin: 10px 0 0 35px; }
+
+.invoice {
+  padding: 20px 40px 26px 40px; }
+
+.btn_grey_small {
+  color: #333;
+  font-size: 14px;
+  height: 38px;
+  line-height: 38px;
+  width: 123px;
+  text-decoration: none;
+  display: block;
+  border: 1px solid #d9d9d9;
+  background: #fafafa;
+  text-align: center; }
+  .btn_grey_small:hover {
+    color: #333;
+    background: #f5f5f5; }
+
+/* 支付成功 */
+.gheader.bank-wrap .bank-list li em {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 21px;
+  height: 40px;
+  background: #ccffee;
+  border-left: 1px solid #b4c5bf;
+  color: #000;
+  text-align: center;
+  font-family: "宋体";
+  padding-top: 2px; }
+
+.gheader {
+  background: #fff;
+  margin-bottom: 40px; }
+  .gheader .info {
+    width: 920px;
+    margin: 20px auto 0; }
+
+.gheader p.text {
+  font-size: 18px;
+  font-weight: bold;
+  font-style: normal;
+  margin-left: 20px;
+  margin-top: 22px;
+  color: #333; }
+  .gheader p.text b {
+    background: url(../images/cart_tip_icon5.png) no-repeat #FFF;
+    background-position: 0px -38px;
+    width: 40px;
+    height: 36px;
+    overflow: hidden;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 10px; }
+
+.gheader .bank-list li input {
+  vertical-align: middle;
+  margin-left: 10px; }
+
+.gwrap {
+  overflow: hidden; }
+
+.pay-wrap {
+  padding-bottom: 40px; }
+  .pay-wrap .pay {
+    padding: 20px 0 26px 32px;
+    background: none; }
+  .pay-wrap .info2 {
+    background-color: #fff;
+    overflow: hidden;
+    padding-left: 40px; }
+
+.paysucc {
+  color: #333;
+  font-family: "宋体";
+  font-weight: normal;
+  margin-top: 16px;
+  font-size: 14px;
+  padding: 0 30px; }
+  .paysucc a {
+    color: #333;
+    margin-right: 15px; }
+    .paysucc a:hover {
+      color: #faa42e; }
+
+/* 收货地址 */
+.path, .pay, .time, .pro-list, .invoice {
+  padding: 20px 40px 26px 40px;
+  background: url(../images/icon0.png) repeat-x bottom;
+  overflow: hidden; }
+
+.path {
+  position: relative;
+  padding: 20px 0 20px 40px; }
+  .path dl {
+    position: relative;
+    float: left;
+    width: 226px;
+    height: 138px;
+    margin: 13px 13px 0 0;
+    border: 1px solid #ccc;
+    padding: 15px 26px;
+    overflow: hidden;
+    cursor: pointer; }
+    .path dl dt {
+      line-height: 26px;
+      height: 26px;
+      display: block;
+      overflow: hidden;
+      clear: both;
+      border-bottom: 1px dashed #333333;
+      margin-bottom: 6px; }
+  .path span.tit {
+    float: left;
+    width: 66px;
+    font-weight: bold; }
+  .path span.tel {
+    float: left; }
+  .path span.def {
+    float: right;
+    color: #35c1d5;
+    display: none; }
+  .path .on span.def {
+    display: block; }
+  .path dl dd {
+    padding: 4px 0 0;
+    height: 80px;
+    line-height: 20px;
+    overflow: hidden; }
+  .path dl .ubtn {
+    display: none;
+    position: absolute;
+    right: 32px;
+    bottom: 12px;
+    height: 18px;
+    line-height: 18px; }
+    .path dl .ubtn .del {
+      padding: 0 0 0 15px;
+      margin: 0 0 0 15px;
+      background-position: -270px 2px;
+      cursor: pointer;
+      color: #02b1cb;
+      font-weight: normal; }
+  .path .default {
+    background-position: 0 -474px;
+    border: none !important;
+    padding: 16px 27px !important; }
+  .path .on {
+    border: 2px solid #c29721;
+    padding: 14px 25px; }
+    .path .on .ubtn {
+      display: block; }
+  .path .add {
+    border-color: #eceae6;
+    line-height: 138px;
+    text-align: center;
+    cursor: pointer; }
+    .path .add b {
+      position: relative;
+      top: 3px;
+      left: -5px;
+      display: inline-block;
+      width: 20px;
+      height: 19px;
+      background-position: 0 -73px; }
+    .path .add dd {
+      height: auto;
+      padding: 0;
+      line-height: 138px; }
+
+.addBtn {
+  padding: 3px 5px;
+  margin: 0 10px;
+  cursor: pointer; }
+  .addBtn i {
+    font-style: normal;
+    font-weight: bold; }
+
+.path .default, .path .add b {
+  background-image: url(../images/confirm_icon1.png);
+  background-repeat: no-repeat; }
+
+.path p {
+  clear: both;
+  padding: 10px 40px 0 0; }
+.path .more-path {
+  position: relative;
+  clear: both;
+  display: inline-block;
+  margin: 5px 0 0 0;
+  color: #c29721;
+  padding: 0 13px 0 0;
+  cursor: pointer;
+  white-space: nowrap; }
+  .path .more-path i {
+    position: absolute;
+    right: 0;
+    top: 8px;
+    border: 5px dashed transparent;
+    border-top: 5px solid #c6a756; }
+    .path .more-path i.up {
+      position: absolute;
+      right: 0;
+      top: 3px;
+      border: 5px dashed transparent;
+      border-bottom: 5px solid #c6a756; }
+
+.del, .update, .main h3 i {
+  background-image: url(../images/confirm_icon1.png);
+  background-repeat: no-repeat; }
+
+.update {
+  padding: 0 0 0 15px;
+  background-position: 0 -95px;
+  color: #02b1cb;
+  cursor: pointer;
+  font-size: 12px;
+  font-weight: normal; }
+
+#invoice_need_edit, #invoice_need_save, #time_closed {
+  margin: 10px 0 0 35px; }
+
+.time {
+  padding-right: 0;
+  _height: 133px;
+  overflow: normal; }
+  .time dl {
+    display: inline;
+    float: left;
+    width: 244px;
+    height: 71px;
+    margin: 0 19px 0 0;
+    padding: 1px 1px 1px 30px;
+    border: 1px solid #eceae6;
+    cursor: pointer;
+    background-position: -99px -20px; }
+    .time dl dt {
+      font-weight: bold;
+      line-height: 71px;
+      font-size: 16px; }
+    .time dl.on {
+      padding: 0 0 0 29px;
+      border: 2px solid #52aa41;
+      background-position: 254px 52px; }
+  .time p {
+    clear: both;
+    padding: 10px 0 0;
+    color: #333; }
+    .time p a {
+      color: #999; }
+    .time p input {
+      position: relative;
+      top: 2px; }
+
+.pro-list h2, .pro-list h3 {
+  margin: 0 0 15px; }
+.pro-list h2 {
+  left: 0;
+  position: relative;
+  height: 14px;
+  font: bold 12px/24px Microsoft YaHei;
+  font-weight: normal; }
+  .pro-list h2 span {
+    display: inline-block;
+    padding: 0 10px; }
+  .pro-list h2 a {
+    position: absolute;
+    right: 0;
+    padding: 0 15px 0 0;
+    font-size: 12px;
+    font-weight: normal; }
+.pro-list h3 a {
+  position: absolute;
+  right: 0;
+  padding: 0 15px 0 0;
+  font-size: 12px;
+  font-weight: normal; }
+.pro-list h2 a b, .pro-list h3 a b {
+  position: absolute;
+  right: 0;
+  top: 7px;
+  border: 5px dashed transparent;
+  border-left: 5px solid #666;
+  overflow: hidden;
+  width: 0;
+  height: 0; }
+.pro-list h2 a:hover b {
+  border-left: 5px solid #faa42e; }
+.pro-list table {
+  width: 100%;
+  text-align: center; }
+  .pro-list table th {
+    height: 40px;
+    line-height: 40px;
+    background: #eee; }
+  .pro-list table td {
+    height: 30px;
+    border-bottom: 1px solid #eee2c1;
+    line-height: 30px; }
+  .pro-list table .t1 {
+    text-align: left;
+    padding: 0 20px; }
+  .pro-list table .t2 {
+    font: bold 14px Arial; }
+    .pro-list table .t2 b {
+      font: normal 12px Microsoft YaHei; }
+  .pro-list table .t1 b {
+    background: #e86b3a;
+    color: #fff;
+    padding: 2px 4px 3px 4px;
+    margin: 0 5px 0 0;
+    line-height: 13px;
+    border-radius: 2px; }
+  .pro-list table .noshop {
+    color: #999 !important;
+    background: #fdfce7; }
+    .pro-list table .noshop .t1 b {
+      background: #ccc; }
+    .pro-list table .noshop a {
+      color: #999; }
+  .pro-list table .more {
+    position: relative;
+    padding: 4px 0;
+    font-style: normal;
+    white-space: nowrap;
+    color: #02b1cc;
+    margin: 0 0 0 10px; }
+    .pro-list table .more em {
+      position: absolute;
+      left: 30px;
+      top: 10px;
+      display: inline-block;
+      width: 0;
+      height: 0;
+      font-size: 0;
+      overflow: hidden;
+      border: 4px dashed transparent;
+      border-top: 4px solid #02b1cc; }
+.pro-list .price {
+  text-align: right;
+  margin: 0 0 20px;
+  padding: 10px;
+  line-height: 26px;
+  border-bottom: 1px solid #f1ead5; }
+  .pro-list .price span {
+    display: inline-block;
+    width: 90px; }
+  .pro-list .price .red {
+    font-size: 16px;
+    color: #faa42e; }
+    .pro-list .price .red b {
+      font-size: 14px;
+      font-weight: normal; }
+
+.hb, .reel, .invoice {
+  padding: 10px 12px; }
+
+.invoice {
+  padding: 20px 40px 26px 40px; }
+
+.invoice p {
+  line-height: 30px;
+  vertical-align: middle;
+  _height: 30px;
+  height: 34px; }
+
+.invoice span {
+  display: inline-block;
+  margin: 0 15px 0 0; }
+
+.hb a, .reel a, .invoice a {
+  color: #666;
+  padding: 0 0 0 12px; }
+
+.save {
+  width: 90px;
+  background: url(../images/confirm_icon1.png) no-repeat;
+  background-position: 0 -186px;
+  display: inline-block;
+  height: 30px;
+  margin: 0 10px 0 0;
+  line-height: 30px;
+  text-align: center;
+  color: #666;
+  cursor: pointer; }
+
+.dtip {
+  background: url(../images/confirm_icon1.png) no-repeat;
+  height: 30px !important;
+  text-indent: 20px;
+  background-position: 0 -126px;
+  padding: 0;
+  line-height: 30px; }
+
+.hb input, .reel input, .invoice input {
+  position: relative;
+  top: 1px;
+  margin: 0 3px 0 0; }
+
+.tinput {
+  border: 1px solid #ccc;
+  width: 214px;
+  height: 24px;
+  line-height: 24px;
+  margin: 0 10px 0 0;
+  padding-left: 10px;
+  position: relative;
+  _top: 5px;
+  vertical-align: middle;
+  color: #666; }
+
+.confirm {
+  padding: 40px 40px 50px;
+  text-align: right; }
+  .confirm span {
+    font: 18px Microsoft YaHei;
+    vertical-align: middle; }
+    .confirm span b {
+      color: #faa42e;
+      font-weight: normal;
+      font-size: 28px; }
+  .confirm strong {
+    display: inline-block;
+    width: 200px;
+    height: 50px;
+    margin: 0 0 0 20px;
+    font: 18px Microsoft YaHei;
+    color: #fff;
+    line-height: 50px;
+    text-align: center;
+    background: #faa42e; }
+    .confirm strong.on {
+      background-position: 0 -408px;
+      cursor: pointer; }
+
+.btn_grey_small {
+  color: #333;
+  font-size: 14px;
+  height: 38px;
+  line-height: 38px;
+  width: 123px;
+  text-decoration: none;
+  display: block;
+  border: 1px solid #d9d9d9;
+  background: #fafafa;
+  text-align: center; }
+
+/* 收货地址弹出层 */
+#lock {
+  background: #000;
+  height: 100%;
+  _height: expression(document.body.scrollHeight);
+  left: 0;
+  filter: alpha(opacity=60);
+  opacity: 0.6;
+  position: fixed !important;
+  _position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 100; }
+
+.pathadd {
+  position: absolute;
+  left: 50%;
+  top: -9999px;
+  z-index: 110;
+  width: 665px;
+  padding: 0 0 70px 30px;
+  background: #fff;
+  border-radius: 5px;
+  color: #666; }
+  .pathadd h3 {
+    font: 18px/60px Microsoft YaHei;
+    color: #333; }
+  .pathadd .close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 13px;
+    height: 13px;
+    overflow: hidden;
+    cursor: pointer;
+    background: url(../images/confirm_icon1.png) no-repeat;
+    background-position: -32px 0;
+    opacity: .6;
+    filter: alpha(opacity=60); }
+    .pathadd .close:hover {
+      opacity: 1;
+      filter: alpha(opacity=100); }
+  .pathadd p {
+    position: relative;
+    padding: 0 0 20px;
+    line-height: 33px; }
+    .pathadd p i {
+      position: relative;
+      top: 5px;
+      color: red;
+      font-style: normal;
+      font-size: 16px;
+      padding: 0 4px; }
+    .pathadd p span {
+      text-align: right;
+      display: inline-block;
+      width: 95px;
+      overflow: hidden;
+      vertical-align: middle;
+      color: #333; }
+    .pathadd p b {
+      position: absolute;
+      left: 95px;
+      top: 35px;
+      line-height: 22px;
+      font-weight: normal;
+      color: #999; }
+    .pathadd p a {
+      color: #c6a756; }
+  .pathadd input {
+    background: #fff;
+    height: 32px;
+    *line-height: 32px;
+    border: 1px solid #eee;
+    vertical-align: middle;
+    padding: 0 10px; }
+  .pathadd select {
+    border: 1px solid #eee;
+    height: 32px;
+    color: #666; }
+  .pathadd .save {
+    margin: 16px 0 0 95px;
+    border: none;
+    background: #faa42e;
+    width: 106px;
+    height: 31px;
+    border-radius: 3px;
+    color: #fff; }
+  .pathadd .xicon {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+    background-position: -54px 0;
+    position: relative;
+    top: 5px;
+    left: 10px; }
+  .pathadd p .selectDom {
+    width: 60px;
+    height: 33px;
+    margin: 0 8px 0 0;
+    line-height: 33px; }
+    .pathadd p .selectDom i {
+      top: 15px; }
+
+.order-mes span {
+  display: block;
+  line-height: 28px; }
+
+.pay .pay-money {
+  margin: 0px 15px;
+  font-weight: normal; }
+
 .feature-service .tab li {
   cursor: pointer; }
   .feature-service .tab li.curr {
@@ -2824,8 +3550,7 @@ a.btn:hover {
   #footer_copyright .logo05 {
     background-position: 0 -372px; }
 
-.main {
-  width: 1060px;
-  margin: auto; }
+.gwrap, .pro-list .price .red b {
+  font-family: Microsoft yahei; }
 
 /*# sourceMappingURL=confirm.css.map */
