--- a/sass/login.scss
+++ b/sass/login.scss
@@ -832,6 +832,175 @@ input {
   border-radius: 3px;
 }
 
+/* 忘记密码 */
+%icon{
+  background-image: url(../images/icon.png);
+  background-repeat: no-repeat;
+}
+.forget{
+  background: #3b4a45;
+  padding: 214px 0 74px;
+}
+.forget_d{
+  border: 3px solid #435550;
+  background: #fff;
+  width: 994px;
+  margin: auto;
+  padding: 32px;
+  .f_box{
+    width: 500px;
+    margin-left: 50px;
+    border-right: 1px solid #eee;
+    h1{
+      font-weight: 400;
+      font-size: 20px;
+      color: #faa42e;
+    }
+  }
+  .s_box{
+    width: 350px;
+    .now{
+      display: block;
+      width: 150px;
+      height: 40px;
+      line-height: 40px;
+      text-align: center;
+      color: #fff;
+      background: #4c5d57;
+      font-size: 14px;
+      margin-top: 40px;
+      margin-bottom: 20px;
+      &:hover{
+        background: #618478;
+      }
+    }
+    .otherAccout{
+      width: 202px;
+    }
+  }
+}
+.line{
+  margin: 30px 20px;
+  position: relative;
+}
+.textbox_ui .invalid, .textbox_ui .focus_text{
+  left: 88px;
+}
+.btn{
+  margin-left: 10px;
+  border: 1px solid #dddddd;
+  padding: 0;
+  width: 106px;
+  height: 36px;
+  background: #f4f4f4;
+  margin-top: 0;
+  text-align: center;
+  line-height: 36px;
+  color: #333;
+  text-decoration: none;
+  display: inline-block;
+}
+.reg-bu{
+  margin: 14px 0 80px 118px;
+  width: 161px;
+  height: 36px;
+  line-height: 36px;
+  background: #faa42e;
+  text-align: center;
+  color: #fff;
+  font-size: 14px;
+  font-weight: bold;
+  button{
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: $hcolor;
+    border:0;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+}
+.otherAccout {
+  background-color: #f6f6f6;
+  margin-bottom: 10px;
+  padding-left: 1px;
+  max-width: 303px;
+  _width: 304px;
+  *padding-bottom: 1px;
+  *zoom: 1;
+  p {
+    padding-left: 11px;
+    line-height: 30px;
+    color: #666;
+  }
+  a {
+    text-decoration: none;
+    margin: 0 1px 1px 0;
+    line-height: 35px;
+    background: #fff;
+    padding: 0 10px;
+    color: #000;
+    width: 80px;
+    float: left;
+    _line-height: normal;
+    _padding: 5px 10px;
+  }
+  i {
+    @extend %icon;
+    filter: alpha(opacity = 80);
+    vertical-align: middle;
+    display: inline-block;
+    margin-right: .25em;
+    opacity: .8;
+    height: 24px;
+    width: 24px;
+    *cursor: pointer;
+  }
+  a:hover i {
+    filter: none;
+    opacity: 1;
+  }
+  .iqq {
+    background-position: -59px -168px;
+  }
+  .i360 {
+    background-position: 0 -175px;
+  }
+  .ituan {
+    background-position: 0 -200px;
+  }
+  .iweibo {
+    background-position: 0 -225px;
+  }
+  .ibaidu {
+    background-position: 0 -250px;
+  }
+  .imogu {
+    background-position: 0 -275px;
+  }
+  .irenren {
+    background-position: 0 -300px;
+  }
+  .ixunlei {
+    background-position: 0 -325px;
+  }
+  .ialipay {
+    background-position: -59px -193px;
+  }
+}
+
+
+.forget .msg-text {
+  color: #999;
+  margin-top: -26px;
+  display: none;
+}
+.forget .ftx-01 {
+  color: #f00;
+}
+
 
 
 
